fix: slider overflow

--- a/src/styles/_technologies.scss
+++ b/src/styles/_technologies.scss
@@ -34,12 +34,15 @@
 }
 
 .slick-slider {
-  & .slick-list .slick-track {
-    width: max-content !important;
+  & .slick-list {
+    overflow: visible;
+    & .slick-track {
+      width: max-content !important;
 
-    & .slick-slide {
-      min-width: 350px;
-      margin: 0 5px;
+      & .slick-slide {
+        min-width: 350px;
+        margin: 0 5px;
+      }
     }
   }
 }
