--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -977,6 +977,10 @@
   height: 220px;
 }
 
+.slick-slider .slick-list {
+  overflow: visible;
+}
+
 .slick-slider .slick-list .slick-track {
   width: -webkit-max-content !important;
   width: -moz-max-content !important;
